styles/style.css
:root {
    --debug: red;
    --debug2: blue;
    --google-darken: hsl(0, 0%, 92%);
    --off-black: #222;
}

a {
    text-decoration: none;
    color: var(--off-black);
    margin: 0 5px;
}

.grid {
    display: grid;
    height: 100vh;
    grid-template-columns: auto;
    grid-template-rows: 60px 1fr 47px;
    grid-template-areas: "header" "main" "footer";
}

.flex-column {
    display: flex;
    flex-direction: column;
    text-align: center;
}

.flex-row {
    display: flex;
    flex-direction: row;
}

header {
    display: flex;
    width: 100%;
}

.left {
    display: flex;
    align-items: center;
    background-color: var(--debug2);
    justify-items: left;
}

.right {
    display: flex;
    align-items: center;
    background-color: var(--debug);
}

main {
    display: flex;
    margin: auto;
    grid-area: main;
}

footer {
    grid-area: footer;
    display: flex;
    background-color: var(--google-darken);
}

